# CppRenderPipeline

./: .gitignore  CMakeLists.txt  README.md
include/: jit.h
src/: jit.cpp  main.cpp
test/: test.frag  test.frag.ll  test.vert  test.vert.ll
test/easy/: code.frag.ll  code.vert  code.vert.ll  result.ppm
test/hard/: code.frag  code.frag.ll  code.vert  code.vert.ll  result.ppm
test/normal/: code.frag  code.frag.ll  code.vert  code.vert.ll  result.ppm
